--- a/blog_prep/2017-04-24-determining-optimal-number-of-clusters-in-your-data.Rmd
+++ b/blog_prep/2017-04-24-determining-optimal-number-of-clusters-in-your-data.Rmd
@@ -10,9 +10,12 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-### QUICK INTRO
 
-Recently, I worked a bit with **cluster analysis**: the common method in [unsupervised learning](https://en.wikipedia.org/wiki/Unsupervised_learning) that uses datasets without labeled responses to draw inferences.  
+Recently, I worked a bit with **cluster analysis**: the common method in [unsupervised learning](https://en.wikipedia.org/wiki/Unsupervised_learning) that uses datasets without labeled responses to draw inferences. I wanted to put my notes together and write it all down before I forget it, thus the blog post. For the start, I'll tackle multiple approaches to how to determine the number of clusters in your data.
+
+
+
+### QUICK INTRO
 
 Clustering algorithms aim to establish a structure of your data and assign a cluster/segment to each datapoint based on the input data. Most popular clustering learners (e.g. k-means) expect you to specify the number of segments to be found. However, clusters as such don't exist in firm reality, so more often than not you don't know what is the optimal number of clusters for a given dataset.   
 
