--- a/blog_prep/2017-05-30-animated_london_crimes.Rmd
+++ b/blog_prep/2017-05-30-animated_london_crimes.Rmd
@@ -44,17 +44,19 @@ sort(table(london_police_data$Crime.type))
 
 It looks like _Possession of weapons_ is, thankfully, the least common reported crime, so let's explore where those crimes usually happen and if there's any obvious seasonality. I'll start with creating a separate dataframe: 
 
-```{r weapon_data, include = TRUE}
+```{r weapon_data, include = TRUE, message=FALSE, error=FALSE, comment=FALSE}
 library(dplyr)
 
 weapon_map_data <- london_police_data %>%
   filter(Crime.type == "Possession of weapons") %>% 
   select(Month, Longitude, Latitude, Crime.type)
+
+table(weapon_map_data$Month)
 ```
 
 Next, I'll create a plain map of London using `ggmap` package:
 
-```{r london_map, include = TRUE}
+```{r london_map, include = TRUE, message=FALSE, error=FALSE, comment=FALSE}
 #install.packages("ggmap", type = "source")
 #devtools::install_github("hadley/ggplot2")
 library(ggmap)
@@ -71,7 +73,7 @@ _(Note commented part with package installation: I had to install `ggmap` and `g
 
 Finally, here's a **static** heat map of weapon possession crimes in London, between January 2016 and March 2017:
 
-```{r weapon_static, include=TRUE}
+```{r weapon_static, include=TRUE, message=FALSE, error=FALSE, comment=FALSE}
 weapon_london_heat_map<- ggmap(london_map, extent = "device") +
   stat_density_2d(aes(x = Longitude, y = Latitude, fill = ..level.., alpha=1),
                   data=weapon_map_data, geom = "polygon") +
@@ -85,7 +87,7 @@ Not bad at all! We can now identify the crime hotspots, but there's no way we ca
 
 <br>
 
-### CREATING ANIMATED SINGLE VIEW HEAT MAP
+### CREATING ANIMATED SINGLE-VIEW HEAT MAP
 
 For this purpose I use, now famous, `gganimate` package. If you ever throught that creating gif's with changing plots is hard, you'd better start eyeballing the below code, because the only difference between the static and animated graph is only `frame = Month` part added to graph's `aes()`. Simples. 
 
@@ -103,3 +105,35 @@ map_anime<- ggmap(london_map, extent = "device") +
 gganimate(map_anime)
 ```
 
+From this animation alone (pretty much) you would know which of the following statements is true:  i) weapon-carrying criminals like Easter and summer holidays, thus take time off from their criminal activity during these times, OR ii) during holidays periods the weapon-carrying criminals tend to 'focus' on more central areas while keeping up their criminal activity.
+
+
+
+#### CREATING ANIMATED MULTIPLE-VIEW HEAT MAP
+
+Following the same logic, we can create a faceted-animted view of all crimes in London over 15 months. It goes like this:
+
+```{r all_crimes, include=TRUE, message=FALSE, comment=FALSE, error=FALSE}
+
+# creating a new data.frame
+all_map_data <- london_police_data %>% 
+  select(Month, Longitude, Latitude, Crime.type)
+
+# animated all london crimes over time
+all_london_heat_map<- ggmap(london_map, extent = "device") +
+  stat_density_2d(aes(x = Longitude, y = Latitude, frame = Month, 
+                      fill = ..level.., alpha=1),
+                  data=all_map_data, geom = "polygon") +
+  scale_fill_gradient(low = "blue", high = "red") +
+  scale_alpha(range = c(0.00, 0.5), guide = FALSE) +
+  facet_wrap(~ Crime.type, nrow = 3) 
+
+gganimate(all_london_heat_map)
+```
+
+So, there you go! At the first glance it may look a bit chaotic, but such visualization will quickly make you realise that some crimes always have a narrow geographical range (X or Y, for example), compared to some with universally wide range (e.g. Z). And this is the first step for generating new questions and hypotheses, the integral part of any exploratory analysis!
+
+So, what do you think? Are you converted yet? :)
+
+---------------------------------------------------
+A
