--- a/blog_prep/2017-05-30-animated_london_crimes.Rmd
+++ b/blog_prep/2017-05-30-animated_london_crimes.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "animated_london_crimes"
+title: "Animated graphs as part of Exploratory Data Analysis "
 output: 
   md_document:
     variant: markdown_github
