--- a/blog_prep/2017-08-01-friendships-among-top-#rstats-twitterers.Rmd
+++ b/blog_prep/2017-08-01-friendships-among-top-#rstats-twitterers.Rmd
@@ -3,7 +3,6 @@ title: 'Friendships among top #rstats Twitterers'
 output: html_document
 ---
 
-
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
@@ -27,7 +26,7 @@ setup_twitter_oauth(api_key,api_secret)
 
 ### IMPORTING #RSTAST USERS 
 
-After loading my packages...
+After loading my precious packages...
 
 
 ```{r libraries, , message=FALSE, error=FALSE, warning=FALSE}
@@ -39,13 +38,13 @@ library(ggraph)
 library(DT)
 ```
 
-... I searched for Twitter users that have `#rstats` in their profile description. It definitely doesn't include ALL active and popular R users, but it's a pretty reliable way of picking definite R - fans
+... I searched for Twitter users that have `rstats` in their profile description. It definitely doesn't include ALL active and popular R - users, but it's a pretty reliable way of picking definite R - fans.
 
 ```{r getting_users, include=TRUE, message=FALSE, error=FALSE, warning=FALSE, eval=FALSE}
 r_users <- search_users("#rstats", n = 1000)
 ```
 
-It's importand to say, that even though I wanted to extract 1000 users, I ended up with quite a few duplicates and the actual number of users I got was much smaller: 565
+It's important to say, that in `rtweet::search_users()` even if you specify 1000 users to be extracted, I ended up with quite a few duplicates and the actual number of users I got was much smaller: 565
 
 ```{r used_users}
 r_users %>% summarise(n_users = n_distinct(screen_name))
@@ -62,14 +61,19 @@ Funnily enough, even though my profile description contains `#rstats`, I was not
 
 #### SCORING AND CHOOSING TOP #RSTATS USERS 
 
+Now, let's extract some useful information about those users:
+
 ```{r info_about_users, include = TRUE, message=FALSE, error=FALSE, warning=FALSE, eval = FALSE}
 r_users_info <- lookup_users(r_users$screen_name)
 ```
+
+You'll notice, that created data frame holds information about number of followers, friends (users they follow), lists they belong to, number of tweets (statuses) or how many times sometimes marked those tweets as their favourite.
 
 ```{r activity_vars, include = TRUE, message=FALSE, error=FALSE, warning=FALSE}
 r_users_info %>% select(dplyr::contains("count")) %>% head() %>% DT::datatable()
 ```
 
+And these variables I use for building my 'top score': I simply calculate a percentile for each of those variables and sum it altogether. Given that each variable's percentile will give me a value between 0 and 1, The final score can have a maximum value of 5.
 
 ```{r creating_scores, include = TRUE, message=FALSE, error=FALSE, warning=FALSE}
 r_users_ranking <- r_users_info %>%
@@ -89,11 +93,16 @@ r_users_ranking <- r_users_info %>%
 ```
 
 
+All I need to do now is to pick top 30 users based on the score I calculated. Did you manage get onto the top 30 list? :)
+
 ```{r top_30, include = TRUE, message=FALSE, error=FALSE, warning=FALSE}
 top_30 <- r_users_ranking %>% arrange(desc(top_score)) %>% head(30) %>% arrange(desc(top_score))
 top_30 %>% DT::datatable()
 ```
 
+I must say I'm incredibly impressed by these scores: @hpster, THE top R - twitterer managed to obtain a score of over 4.8 out of 5! Also, @Physical_Prep and @TheSmartJokes managed to tie 8th place, which I thought was unlikely to happed, given how granular the score is. 
+
+Anyway! To add some more depth to my list, I tried to identify those users' gender, to see how many top users are women. I had to do it manually (sic!), as the Twitter API's data doesn't provide this, AFAIK. Let me know if you spot any mistakes!
 
 
 ```{r top30_gender, include = TRUE, message=FALSE, error=FALSE, warning=FALSE}
@@ -113,8 +122,11 @@ table(top30_lookup$gender)
 
 ```
 
+It looks like a third of all top users are womes, but in the top 10 users there are 6 women. Better than I expected, actually. So, well done, ladies!
+
 #### GETTING FRIENDS NETWORK
 
+Now, this was the trickiest part of this project: extracting top users' friends list and putting it all in one data frame. As you ma be aware, Twitter API has a limit od downloading information on 15 accounts in 15 minutes. So for my list, I had to break it up into 2 steps, 15 users each and then I named each list according to the top user they refer to:
 
 ```{r top_friends1, include=TRUE, message=FALSE, error=FALSE, warning=FALSE, eval = FALSE}
 top_30_usernames <- top30_lookup$screen_name
@@ -127,18 +139,14 @@ friends_top30b <- map(top_30_usernames[16:30], get_friends)
 
 ```
 
+After this I end up with two lists, each containing all friends' IDs for top and bottom 15 users respectively. Here's an example: 
+
 ```{r topfriends_str}
-str(friends_top30a)
+str(friends_top30b)
 ```
 
 
-
-
-
-
-
-
-
+So what I need to do now is i) append the two lists, ii) create a variable stating top users' name in each of those lists and iii) turn lists into data frames. All this can be done in 3 lines of code. And brace yourself: here comes the `purrr` trick I've been going on about! Simply using `purrr:::map2_df` I can take a single list of lists, create a name variable in each of those lists based on the list name (`twitter_top_user`) and convert the result into the data frame. BRILLIANT!!
 
 
 ```{r putting_lists_together, include = TRUE, message=FALSE, error=FALSE, warning=FALSE}
@@ -146,6 +154,7 @@ str(friends_top30a)
 friends_top30 <- append(friends_top30a, friends_top30b)
 names(friends_top30) <- top_30_usernames
 
+# purrr - trick I've been banging on about!
 friends_top <- map2_df(friends_top30, names(friends_top30), ~ mutate(.x, twitter_top_user = .y)) %>% 
   rename(friend_id = user_id) %>% select(twitter_top_user, friend_id)
 
@@ -153,20 +162,26 @@ friends_top <- map2_df(friends_top30, names(friends_top30), ~ mutate(.x, twitter
 friends_top %>% summarize(dist = n_distinct(twitter_top_user))
 ```
 
+Here's the last bit that I need to correct before we move to plotting the friends networks: for some reason, using `purrr::map()` with `rtweet:::get_friends()` gives me only 5000 friends, whereas the true value is over 8000. As it's the only top user with more than 5000 friends, I'll download his friends separately...
 
+```{r SJ_friends_start, include=TRUE, message=FALSE, error=FALSE, warning=FALSE}
 
-```{r SJ_friends, include=TRUE, message=FALSE, error=FALSE, warning=FALSE, eval = FALSE}
-SJ_friends <- get_followers("TheSmartJokes") %>% 
+# getting a full list of friends
+SJ1 <- get_friends("TheSmartJokes")
+SJ2 <- get_friends("TheSmartJokes", page = next_cursor(SJ1))
+
+# putting the data frames together 
+SJ_friends <-rbind(SJ1, SJ2) %>%  
   rename(friend_id = user_id) %>% 
   mutate(twitter_top_user = "TheSmartJokes") %>% 
   select(twitter_top_user, friend_id)
-```
 
-
-```{r SJ_str}
+# the final results - over 8000 friends, rather than 5000
 str(SJ_friends) 
 ```
 
+
+... and use it to replace those that are already in the final friends list.
 
 ```{r replacing SJ_friends, include=TRUE, message=FALSE, error=FALSE, warning=FALSE}
 friends_top30 <- friends_top %>% 
@@ -175,8 +190,7 @@ friends_top30 <- friends_top %>%
 ```
 
 
-
-
+Some final data cleaning: filtering out friends that are not among the top 30 R - users, replacing their IDs with twitter names and adding gender for top users and their friends... Tam, tam, tam: here we are! Here's the final data frame we'll use for visualising the friends networks!
 
 ```{r final_top30m, include = TRUE, message=FALSE, error=FALSE, warning=FALSE}
 # select friends that are top30 users
@@ -207,27 +221,6 @@ V(f1)$Popularity <- degree(f1, mode = 'in')
 ```
 
 
-
-
-```{r user_gender, include = TRUE}
-ggraph(f1, layout='kk') + 
-  geom_edge_fan(aes(alpha = ..index..), show.legend = FALSE) +
-  geom_node_point(aes(size = Popularity)) +
-  theme_graph( fg_text_colour = 'black') +
-  facet_edges(~user_gender)
-
-```
-
-
-```{r friend_gender, include = TRUE}
-ggraph(f1, layout='kk') + 
-  geom_edge_fan(aes(alpha = ..index..), show.legend = FALSE) +
-  geom_node_point(aes(size = Popularity)) +
-  theme_graph( fg_text_colour = 'black') +
-  facet_edges(~friend_gender)
-
-```
-
 ```{r pure_graph, include = TRUE}
 ggraph(f1, layout='kk') + 
   geom_edge_fan(aes(alpha = ..index..), show.legend = FALSE) +
@@ -247,6 +240,36 @@ ggraph(f1, layout='kk') +
 ```
 
 
+
+
+
+
+
+
+
+```{r user_gender, include = TRUE}
+ggraph(f1, layout='kk') + 
+  geom_edge_fan(aes(alpha = ..index..), show.legend = FALSE) +
+  geom_node_point(aes(size = Popularity)) +
+  theme_graph( fg_text_colour = 'black') +
+  facet_edges(~user_gender) +
+  labs(title='Top 30 #rstats users and their gender')
+
+```
+
+
+```{r friend_gender, include = TRUE}
+ggraph(f1, layout='kk') + 
+  geom_edge_fan(aes(alpha = ..index..), show.legend = FALSE) +
+  geom_node_point(aes(size = Popularity)) +
+  theme_graph( fg_text_colour = 'black') +
+  facet_edges(~friend_gender) +
+  labs(title='Top 30 #rstats users and their friends gender')
+
+```
+
+
+
 ### TAKE HOME MESSAGE 
 
-After weeks and months (!!!) of not publishing anything, finally this post sees the light of day! It went through so many tests and changes - mainly conceptual ones! - that I'm relieved now that it's out and I can move on to another project. But I learned my lesson and next time I'm not going to take that long to push something out - Imperfect projects can improve and refine once they're out and I suppose they engage more people by provoking them to give ideas and suggest better solutions. So, no more breaks like that, please! :)
+After weeks and months (!!!) of not publishing anything, finally this post sees the light of day! It went through so many tests and changes - including conceptual ones! - that I'm relieved now that it's out and I can move on to another project. But I learned my lesson: perfectionism can be a real hurdle for any developer/data scientist and clearly, [I'm not alone with this experience](https://getpocket.com/a/read/1845363129). So, next time I'm not going to take that long to push something out - imperfect projects can improve and refine once they're out and I suppose they engage more people by provoking them to give ideas and suggest better solutions. 
