--- a/blog_prep/2017-12-31-end-of-year-thoughts-(2017).Rmd
+++ b/blog_prep/2017-12-31-end-of-year-thoughts-(2017).Rmd
@@ -35,10 +35,7 @@ v) I said that [before](get the link here), but... don't be a perfectionist. You
 
 vi) if things take longer than you'd like to, is there a way to break them up? Writing two shorter posts instead of one? Presenting a method/package rather than a finished analysis?
 
-vii) the last but definitely not the least: no number of ticked-off boxes on the to-do list will ever replace relationships. 
-
-# ticking off boxes can feel satisfying but won't replace relationships
-
+vii) the last but definitely not the least: no number of ticked-off boxes on the to-do list will ever replace relationships. If I have a plan to finish a project in the evening, but then my partner comes home late and we hadn't have a chance to catch up yet, I drop the project and spend the night chatting with him. For some people it's a no-brainer but I had to learn that our closed-ones have no obligation to subordinate to our internal deadlines or projects. They are ultimately the people that 
 
 
 
