added end of year blog post v1

--- a/blog_prep/2017-12-30-end-of-year-thoughts-(2017).Rmd
+++ b/blog_prep/2017-12-30-end-of-year-thoughts-(2017).Rmd
@@ -1,6 +1,8 @@
 ---
 title: "2017-12-31-end-of-year-thoughts"
-output: html_document
+output: 
+  md_document:
+    variant: markdown_github
 ---
 
 ```{r setup, include=FALSE}
