--- a/blog_prep/2017-12-30-end-of-year-thoughts-(2017).Rmd
+++ b/blog_prep/2017-12-30-end-of-year-thoughts-(2017).Rmd
@@ -8,10 +8,7 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
-#### **SOMETIMES IT'S WORTH MAKING NEW YEAR RESOLUTIONS**
-
-A year ago I made a New Year resolution for 2017 to start an R blog using RMarkdown and Jekyll static sites. At the time, I didn't even know git that well, had no clue what static sites are and was mostly oblivious to the rich and vibrant R community on Twitter. Fast-forward one year and... the picture couldn't be any more different! I'd like to share my thoughts on writing this blog (and data science blog in general) and how it tought me about getting stuff done. But I can't write all this without mentioning a very special group of people - [#rstats community](https://twitter.com/search?q=%23rstats&src=typd)! - that is now a big part of everything that gets published here.
+Sometimes it's worth making New Year resolutions... A year ago I made a New Year resolution for 2017 to start an R blog using RMarkdown and Jekyll static sites. At the time, I didn't even know git that well, had no clue what static sites are and was mostly oblivious to the rich and vibrant R community on Twitter. Fast-forward one year and... the picture couldn't be any more different! I'd like to share my thoughts on writing this blog (and data science blog in general) and how it tought me about getting stuff done. But I can't write all this without mentioning a very special group of people - [#rstats community](https://twitter.com/search?q=%23rstats&src=typd)! - that is now a big part of everything that gets published here.
 
 #### **ON GETTING STUFF DONE**
 I'm a list-person. Totally. I love ticking off boxes, feeling that I've achieved a lot every day. At the same time, working full time in London (meaning work + non-negligible commute) while having two small children (2 and 4 years old) leaves me with very little spare time (usually in the evenings).
